error handling for malformed xml from idp, expired tokens, etc. variable roles extracted from asssertion

--- a/www/sts_dispenser.css
+++ b/www/sts_dispenser.css
@@ -52,6 +52,12 @@ body {
   font-size: 21px;
 }
 
+.gray {
+#    visibility: hidden;
+    text-color: #777;
+    text-decoration: line-through;    
+}
+
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
