--- a/www/sts_dispenser.css
+++ b/www/sts_dispenser.css
@@ -2,6 +2,7 @@
 body {
   padding-top: 15px;
   padding-bottom: 20px;
+  background-color: #FFFFEE;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
